--- a/src/assets/styles/tailwind.css
+++ b/src/assets/styles/tailwind.css
@@ -498,6 +498,9 @@ video {
 		max-width: 1536px;
 	}
 }
+.static{
+	position: static;
+}
 .fixed{
 	position: fixed;
 }
@@ -522,11 +525,14 @@ video {
 .top-0{
 	top: 0px;
 }
-.left-4{
-	left: 1rem;
+.left-2{
+	left: 0.5rem;
 }
 .bottom-0{
 	bottom: 0px;
+}
+.right-24{
+	right: 6rem;
 }
 .z-50{
 	z-index: 50;
@@ -603,6 +609,9 @@ video {
 .mb-14{
 	margin-bottom: 3.5rem;
 }
+.ml-10{
+	margin-left: 2.5rem;
+}
 .block{
 	display: block;
 }
@@ -663,6 +672,9 @@ video {
 .w-96{
 	width: 24rem;
 }
+.w-auto{
+	width: auto;
+}
 .min-w-full{
 	min-width: 100%;
 }
@@ -671,6 +683,9 @@ video {
 }
 .border-collapse{
 	border-collapse: collapse;
+}
+.cursor-pointer{
+	cursor: pointer;
 }
 .list-none{
 	list-style-type: none;
@@ -707,6 +722,9 @@ video {
 }
 .gap-4{
 	gap: 1rem;
+}
+.gap-14{
+	gap: 3.5rem;
 }
 .overflow-hidden{
 	overflow: hidden;
@@ -763,6 +781,10 @@ video {
 	--tw-bg-opacity: 1;
 	background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
 }
+.bg-blue-300{
+	--tw-bg-opacity: 1;
+	background-color: rgba(147, 197, 253, var(--tw-bg-opacity));
+}
 .bg-gradient-to-tr{
 	background-image: linear-gradient(to top right, var(--tw-gradient-stops));
 }
@@ -808,6 +830,14 @@ video {
 .px-10{
 	padding-left: 2.5rem;
 	padding-right: 2.5rem;
+}
+.py-1{
+	padding-top: 0.25rem;
+	padding-bottom: 0.25rem;
+}
+.px-11{
+	padding-left: 2.75rem;
+	padding-right: 2.75rem;
 }
 .pt-8{
 	padding-top: 2rem;
