sorted out bar chart size

--- a/src/assets/styles/tailwind.css
+++ b/src/assets/styles/tailwind.css
@@ -464,6 +464,14 @@ video {
   display: none;
 }
 *, ::before, ::after{
+	--tw-translate-x: 0;
+	--tw-translate-y: 0;
+	--tw-rotate: 0;
+	--tw-skew-x: 0;
+	--tw-skew-y: 0;
+	--tw-scale-x: 1;
+	--tw-scale-y: 1;
+	--tw-transform: translateX(var(--tw-translate-x)) translateY(var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 	--tw-border-opacity: 1;
 	border-color: rgba(229, 231, 235, var(--tw-border-opacity));
 	--tw-ring-offset-shadow: 0 0 #0000;
@@ -539,6 +547,12 @@ video {
 }
 .z-10{
 	z-index: 10;
+}
+.col-start-4{
+	grid-column-start: 4;
+}
+.col-end-6{
+	grid-column-end: 6;
 }
 .mx-auto{
 	margin-left: auto;
@@ -645,6 +659,9 @@ video {
 .h-40{
 	height: 10rem;
 }
+.h-auto{
+	height: auto;
+}
 .min-h-full{
 	min-height: 100%;
 }
@@ -683,6 +700,9 @@ video {
 }
 .border-collapse{
 	border-collapse: collapse;
+}
+.transform{
+	transform: var(--tw-transform);
 }
 .cursor-pointer{
 	cursor: pointer;
