--- a/src/assets/styles/tailwind.css
+++ b/src/assets/styles/tailwind.css
@@ -585,6 +585,9 @@ video {
 .mr-6{
 	margin-right: 1.5rem;
 }
+.mt-5{
+	margin-top: 1.25rem;
+}
 .-mt-24{
 	margin-top: -6rem;
 }
@@ -599,9 +602,6 @@ video {
 }
 .-mt-8{
 	margin-top: -2rem;
-}
-.mt-5{
-	margin-top: 1.25rem;
 }
 .mt-3{
 	margin-top: 0.75rem;
@@ -624,11 +624,11 @@ video {
 .-ml-4{
 	margin-left: -1rem;
 }
-.mb-14{
-	margin-bottom: 3.5rem;
-}
 .ml-10{
 	margin-left: 2.5rem;
+}
+.mb-14{
+	margin-bottom: 3.5rem;
 }
 .block{
 	display: block;
@@ -750,6 +750,9 @@ video {
 .justify-between{
 	justify-content: space-between;
 }
+.gap-5{
+	gap: 1.25rem;
+}
 .gap-2{
 	gap: 0.5rem;
 }
@@ -764,6 +767,11 @@ video {
 }
 .overflow-y-auto{
 	overflow-y: auto;
+}
+.truncate{
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
 }
 .whitespace-nowrap{
 	white-space: nowrap;
@@ -910,13 +918,17 @@ video {
 	font-size: 0.75rem;
 	line-height: 1rem;
 }
-.text-xl{
-	font-size: 1.25rem;
+.text-lg{
+	font-size: 1.125rem;
 	line-height: 1.75rem;
 }
 .text-3xl{
 	font-size: 1.875rem;
 	line-height: 2.25rem;
+}
+.text-xl{
+	font-size: 1.25rem;
+	line-height: 1.75rem;
 }
 .font-medium{
 	font-weight: 500;
@@ -927,11 +939,17 @@ video {
 .font-light{
 	font-weight: 300;
 }
+.font-semibold{
+	font-weight: 600;
+}
 .uppercase{
 	text-transform: uppercase;
 }
 .leading-none{
 	line-height: 1;
+}
+.leading-6{
+	line-height: 1.5rem;
 }
 .tracking-wider{
 	letter-spacing: 0.05em;
@@ -959,12 +977,20 @@ video {
 	--tw-text-opacity: 1;
 	color: rgba(17, 24, 39, var(--tw-text-opacity));
 }
+.text-gray-500{
+	--tw-text-opacity: 1;
+	color: rgba(107, 114, 128, var(--tw-text-opacity));
+}
 .text-purple-500{
 	--tw-text-opacity: 1;
 	color: rgba(139, 92, 246, var(--tw-text-opacity));
 }
 .shadow-lg{
 	--tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.shadow{
+	--tw-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
 	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 .shadow-xl{
@@ -2525,6 +2551,14 @@ video {
 	--tw-text-opacity: 1;
 	color: rgba(17, 24, 39, var(--tw-text-opacity));
 }
+@media (min-width: 640px){
+	.sm\:grid-cols-3{
+		grid-template-columns: repeat(3, minmax(0, 1fr));
+	}
+	.sm\:p-6{
+		padding: 1.5rem;
+	}
+}
 @media (min-width: 768px){
 	.md\:left-0{
 		left: 0px;
@@ -2598,10 +2632,10 @@ video {
 	.xl\:col-end-6{
 		grid-column-end: 6;
 	}
-	.xl\:grid-cols-5{
-		grid-template-columns: repeat(5, minmax(0, 1fr));
-	}
 	.xl\:grid-cols-4{
 		grid-template-columns: repeat(4, minmax(0, 1fr));
+	}
+	.xl\:grid-cols-5{
+		grid-template-columns: repeat(5, minmax(0, 1fr));
 	}
 }
