--- a/src/assets/styles/tailwind.css
+++ b/src/assets/styles/tailwind.css
@@ -585,6 +585,9 @@ video {
 .mr-6{
 	margin-right: 1.5rem;
 }
+.ml-2{
+	margin-left: 0.5rem;
+}
 .mt-5{
 	margin-top: 1.25rem;
 }
@@ -657,6 +660,12 @@ video {
 .h-full{
 	height: 100%;
 }
+.h-12{
+	height: 3rem;
+}
+.h-24{
+	height: 6rem;
+}
 .h-screen{
 	height: 100vh;
 }
@@ -668,9 +677,6 @@ video {
 }
 .h-40{
 	height: 10rem;
-}
-.h-12{
-	height: 3rem;
 }
 .h-auto{
 	height: auto;
@@ -689,6 +695,9 @@ video {
 }
 .w-full{
 	width: 100%;
+}
+.w-12{
+	width: 3rem;
 }
 .w-48{
 	width: 12rem;
